Add GetFull Endpoint
