# docs/swagger.yaml
@@ -3777,6 +3777,38 @@ paths:
       tags:
       - Oscal
       - Profiles
+  /oscal/profiles/{id}/full:
+    get:
+      description: Retrieves the full OSCAL Profile, including all nested content.
+      parameters:
+      - description: Profile ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.GenericDataResponse-oscalTypes_1_1_3_Profile'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Error'
+      summary: Get full Profile
+      tags:
+      - Oscal
+      - Profiles
   /oscal/profiles/{id}/imports:
     get:
       description: List imports for a specific profile
